# mcp_server_develop

./: .gitignore  .gitmodules  .sops.yaml  1.pptx  README.md  ai_kg_output.graphml  config.yaml  env.yaml  kg_output_local.graphml  pyproject.toml  server.py  setup.py
core/: hello_secrets.py
docs/development-guides/: about-mcp-server.mdx  debug-mcp-server.mdx  develop-mcp-server.mdx  project-structure.mdx  sops.mdx
docs/prerequisites/: git.mdx  node.js.mdx  sops.mdx  uv.mdx
modules/YA_Common/: .gitignore  README.md  pyproject.toml
modules/YA_Common/mcp/: base_adapter.py  openai_adapter.py
modules/YA_Common/utils/: errors.py  helpers.py  middleware.py
modules/YA_Secrets/: .gitignore  .gitmodules  README.md  linux-macos.generate-age-key.sh  linux-macos.manage.sh  linux-macos.setup.sh  pyproject.toml  secrets_parser.py  windows.generate-age-key.ps1  windows.manage.ps1  windows.setup.ps1
modules/YA_Secrets/modules/YA_Common/git/: git_client.py  gitea_client.py
modules/YA_Secrets/modules/YA_Common/mcp/: base_connector.py  mcp_client.py
modules/YA_Secrets/modules/YA_Common/types/: mcp.py  server.py
prompts/: __init__.py  hello_prompt.py  kg_extract_prompt.py  kg_generate_prompt.py
resources/: __init__.py  hello_resource.py  kg_resources.py
scripts/: inspect_mcp.py  inspect_mcp_client_runtime.py  inspect_mcp_submodules.py  kg_cli.py  mcp_client_example.py  mcp_official_client.py  mcp_submodules_output.json  mcp_transport_client.py  run_process_tool.py
tests/: test_kg_tool.py
tools/: __init__.py  hello_tool.py  kg_tool.py
(+4 files in other folders)
