[project]
name = "YA_MCPServer_Knowledge_graph_Generator"
version = "0.1.0"
description = "A mcp server which extracts content and generate knowledge graph"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "art>=6.5",
    "black>=25.9.0",
    "colorlog>=6.10.1",
    "httpx>=0.28.1",
    "mcp[cli]>=1.14.0",
    "pyyaml>=6.0.2",
    "ruff>=0.14.4",
]
